# silverstreet

backend/: .gitignore  Cargo.toml
backend/src/: main.rs  username.rs
frontend/: .eleventy.js  package-lock.json  package.json
frontend/src/: catalogue.html  chat.html  index.html  snake.html
frontend/src/_includes/: base.html  note.html  note.js  snake.js
frontend/src/css/: mixins.scss  style.scss  variables.scss
frontend/src/notes/: 0.md  1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  4.md  5.md  6.md  7.md  8.md  9.md
