[package]
name = "silverstreet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
