[package]
name = "silverstreet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
smol_str = { version = "0.2.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
